[package]
name = "lybic-sdk-rs"
version = "0.1.0"
edition = "2024"
authors = ["Lybic Development Team"]

[dependencies]
serde_derive = "^1.0"
serde_json = "^1.0"
url = "1.5"
hyper = { version = "1.7.0", features = ["full"] }
futures = "0.3"
serde = "1.0.219"
hyper-util = { version = "0.1.16", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"
http = "1.0"
base64 = "0.22.1"
async-trait = "0.1.81"
