[package]
name = "lybic-sdk-rs"
version = "0.1.0"
edition = "2024"
authors = ["lybic <support@lybic.ai>"]
description = "Lybic sdk for Rust"
readme = "./README.md"
homepage = "https://lybic.ai"
repository = "https://github.com/lybic/lybic-sdk-rs"
license = "MIT"
keywords = ["lybic", "sdk", "agent", "gui", "agentic"]
categories = ["gui"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = "0.13.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
progenitor = "0.12.0"
serde_json = "1"
syn = "2.0"
prettyplease = "0.2.37"
regex = "1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
